 * apport-retrace: Only consider the file name of a source file, not its path;
   the latter often contains parts like "../" or directories which are specific
   to a build machine. This fixes most broken StacktraceSource results.
   (LP: #1462491)
 * packaging.py: Only consider first word in /etc/os-release's NAME value. This
   works around Debian's inconsistent value. (LP: #1408245)

2.18 (2015-07-17)
-----------------
 * Fix backend_apt_dpkg.test_install_packages_permanent_sandbox test to more
   carefully restore the environment and apt config.
 * Enable suid_dumpable in the init.d script to also get Apport reports about
   suid, unreadable, and otherwise protected binaries. These will be "system
   reports" owned and readable by root only.
 * init.d script: Fix tab usage inconsistencies.
 * apport-gtk: Use GtkWidget::valign property instead of GtkMisc::yalign which
   is deprecated in GTK 3.16. Thanks Iain Lane.
 * sandboxutils, make_sandbox(): Don't exit with 0 (success) if the
   ExecutablePath does not exist. (LP: #1462469)
 * sandboxutils, make_sandbox(): Fix second round of package installs to go
   into permanent root dir as well.
 * apt/dpkg install_packages(): If a requested package version is not available
   from apt in the given archive, try to download it from Launchpad. Thanks to
   Brian Murray!
 * kerneloops: Fix crash when determining the version of a custom kernel.
   Thanks Brian Murray. (LP: #1468154)
 * apt/dpkg install_packages(): Ignore -dbg packages whose descriptions contain
   "transitional". (LP: #1469635)
 * Keep "[origin: ...]" information in Package: and Dependencies: fields for
   native-origins.d/ origins, so that it's possible to retrace them. Thanks
   Brian Murray! (LP: #1470572)
 * Add support for retracing with discovering and enabling foreign Launchpad
   PPA origins, as specified in reports' Package:/Dependencies: fields. Thanks
   Brian Murray!