@@ -19,12 +19,7 @@ vmcore_path = os.path.join(vmcore_root, 'vmcore')
 
 pr = apport.Report('KernelCrash')
 package = apport.packaging.get_kernel_package()
-try:
-    package_version = apport.packaging.get_version(package)
-except ValueError as e:
-    if 'does not exist' in e.message:
-        package_version = 'unknown'
-pr['Package'] = '%s %s' % (package, package_version)
+pr.add_package(package)
 
 pr.add_os_info()
 if os.path.exists(vmcore_path + '.log'):
@@ -44,7 +39,7 @@ else:
             if re.search('^[0-9]{12}$', timedir):
                 vmcore_dir = os.path.join(vmcore_root, timedir)
                 dmesgfile = os.path.join(vmcore_dir, 'dmesg.' + timedir)
-                report_name = pr['Package'] + '-' + timedir + '.crash'
+                report_name = package + '-' + timedir + '.crash'
                 crash_report = os.path.join(vmcore_root, report_name)
                 pr['VmCoreDmesg'] = (dmesgfile,)
                 if not os.path.exists(crash_report):
