@@ -43,7 +43,7 @@ if not options.package:
 
 # create report
 pr = apport.Report('Package')
-pr['Package'] = options.package
+pr.add_package(options.package)
 pr['SourcePackage'] = apport.packaging.get_source(options.package)
 pr['ErrorMessage'] = (sys.stdin, False)
 
